# robust-vision-thesis

./: .gitignore  README.md  default.conf  load_config.sh  mitsuba.conf  pyproject.toml  run.sh  setup.sh
experiments/mooney-bodies/: specs.json
robust_vision/: renderer.py
robust_vision/models/: smpl.py  smpl_constants.py
robust_vision/utils/: enoki.py  graphics.py  metrics.py  mitsuba.py  workspace.py
scripts/analysis/: analyze_data.Rmd  parse_experiments.py
scripts/stimuli/: 00_h36m_to_mesh.py  01_sample_candidates.py  01_sample_candidates.sh  02_analyze_candidates.Rmd  03_visualize_candidates.py  04_collect_images.py  05_make_videos.py  06_make_condlist.py
