[tool.poetry]
name = "robust_vision"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
torch = "1.4"
torchvision = "0.5"
scikit-image = "0.17.2"
pandas = "~=1.1"
tqdm = "^4.59.0"
trimesh = "^3.9.19"
seaborn = "^0.11.1"
SQLAlchemy = "^1.4.22"
smplx = "^0.1.28"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
